# rpi-video-rs

./: .gitignore  .tool-versions  Cargo.toml  LICENCE  README.md  build.rs
examples/: simple.rs
src/: camera_component.rs  encoder_component.rs  init.rs  lib.rs  recorder.rs  video_conn.rs  video_error.rs  video_input_port.rs  video_output.rs  video_output_port.rs  video_param.rs  video_pool.rs  video_res.rs  video_state.rs
src/video_output/: output_buffer.rs  output_callback_user_data.rs  output_processor.rs
tools/c_ver/: Makefile  recorder.c
tools/docker/: Dockerfile  docker_run.sh
